server/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/AuthenticationAPI
            pathType: Prefix
            backend:
              service:
                #metadata__name of clusterIP
                name: authapi
                port:
                  number: 80
          - path: /WeatherForecast
            pathType: Prefix
            backend:
              service:
                name: evalapi
                port:
                  number: 80
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: authapi
                port:
                  number: 80
          - path: /api/SubmissionAPI
            pathType: Prefix
            backend:
              service:
                name: subapi
                port:
                  number: 80
          - path: /api/Assesment
            pathType: Prefix
            backend:
              service:
                name: assesmentapi
                port:
                  number: 80
          - path: /api/EvaluationAPI
            pathType: Prefix
            backend:
              service:
                name: evalapi
                port:
                  number: 80
          - path: /swagger/
            pathType: Prefix
            backend:
              service:
                name: assesmmentapi
                port:
                  number: 80
          - path: /Participants
            pathType: Prefix
            backend:
              service:
                name: assesmentapi
                port:
                  number: 80

              
# On many cloud providers ingress-nginx will also create the corresponding Load Balancer resource. All you have to do is get the external IP and add a DNS A record inside your DNS provider that point myservicea.foo.org and myserviceb.foo.org to the nginx external IP. Get the external IP by running:

# kubectl get services -n ingress-nginx
